@@ -1,0 +1,86 @@
+---
+name: Default directory exclusions
+args: -f t/swamp
+rc: 0
+output: |
+  t/swamp/0
+  t/swamp/c-header.h
+  t/swamp/c-source.c
+  t/swamp/constitution-100k.pl
+  t/swamp/crystallography-weenies.f
+  t/swamp/example.R
+  t/swamp/file.bar
+  t/swamp/file.foo
+  t/swamp/foo_test.py
+  t/swamp/fresh.css
+  t/swamp/groceries/another_subdir/fruit
+  t/swamp/groceries/another_subdir/junk
+  t/swamp/groceries/another_subdir/meat
+  t/swamp/groceries/dir.d/fruit
+  t/swamp/groceries/dir.d/junk
+  t/swamp/groceries/dir.d/meat
+  t/swamp/groceries/fruit
+  t/swamp/groceries/junk
+  t/swamp/groceries/meat
+  t/swamp/groceries/subdir/fruit
+  t/swamp/groceries/subdir/junk
+  t/swamp/groceries/subdir/meat
+  t/swamp/html.htm
+  t/swamp/html.html
+  t/swamp/incomplete-last-line.txt
+  t/swamp/javascript.js
+  t/swamp/lua-shebang-test
+  t/swamp/Makefile
+  t/swamp/Makefile.PL
+  t/swamp/MasterPage.master
+  t/swamp/notaMakefile
+  t/swamp/notaRakefile
+  t/swamp/notes.md
+  t/swamp/options-crlf.pl
+  t/swamp/options.pl
+  t/swamp/perl-test.t
+  t/swamp/perl-without-extension
+  t/swamp/perl.cgi
+  t/swamp/perl.handler.pod
+  t/swamp/perl.pl
+  t/swamp/perl.pm
+  t/swamp/perl.pod
+  t/swamp/pipe-stress-freaks.F
+  t/swamp/Rakefile
+  t/swamp/Sample.ascx
+  t/swamp/Sample.asmx
+  t/swamp/sample.asp
+  t/swamp/sample.aspx
+  t/swamp/sample.rake
+  t/swamp/service.svc
+  t/swamp/stuff.cmake
+  t/swamp/test_foo.py
+  t/swamp/test.py
+  t/swamp/CMakeLists.txt
+  t/swamp/swamp/ignoreme.txt
+  t/swamp/not-an-#emacs-workfile#
+
+---
+name: Combined filters
+args: -f t/swamp -t perl -t rake
+rc: 0
+output: |
+  t/swamp/0
+  t/swamp/constitution-100k.pl
+  t/swamp/perl.pm
+  t/swamp/Rakefile
+  t/swamp/options-crlf.pl
+  t/swamp/options.pl
+  t/swamp/perl-without-extension
+  t/swamp/perl.cgi
+  t/swamp/Makefile.PL
+  t/swamp/perl-test.t
+  t/swamp/perl.handler.pod
+  t/swamp/perl.pl
+  t/swamp/perl.pod
+
+---
+name: Exit code with no matches
+args: "-f t/swamp --type-add=baz:ext:baz -t baz"
+rc: 1
+output:
